# sd

./: .gitignore
Projeto_Final/Marco1/: READ_ME.md
Projeto_Final/Marco2/: README.md  READ_ME.md  run_cli.py  run_cluster.py
Projeto_Final/Marco2 - Vitória/: converter_pdfs.py  run_cli.py
Projeto_Final/Marco2 - Vitória/DFS_M2/: pyproject.toml  split.txt  teste.txt
Projeto_Final/Marco2 [OLD]/: READ_ME.md  run_cli.py  run_cluster.py
Projeto_Final/Marco2 [OLD]/DFS_M2/: pyproject.toml
Projeto_Final/Marco2 [OLD]/DFS_M2/scripts/: start_node2.py  start_node3.py
Projeto_Final/Marco2 [OLD]/DFS_M2/src/dfs/: __main__.py  client.py  config.py
Projeto_Final/Marco2 [OLD]/DFS_M2/src/dfs/application/: node_service.py
Projeto_Final/Marco2 [OLD]/DFS_M2/src/dfs/cluster/: node_client.py  node_registry.py  shard_manager.py
Projeto_Final/Marco2 [OLD]/DFS_M2/src/dfs/interface/: server.py
Projeto_Final/Marco2/DFS_M2/: teste.txt
Projeto_Final/Marco3/: CLAUDE.md  README.md  run_cli.py  run_cluster.py
Projeto_Final/Marco3/DFS_M3/: ARQUITETURA.md  pyproject.toml
Projeto_Final/Marco3/observer/: cluster_observer_m3.py  observabilidade_m3.md
socket/Projeto_Final/Marco1/: READ_ME.md
socket/calc/server/: calc.sh  handler.sh  server.sh
socket/calc/teste/: cliente_multi.py
socket/calc/web/: index.html  script.js  style.css
socket/calc2/: client.py  interface.py  main_elder.py.txt  protocolo.py  proxy_resolver.py  servant.py  server.py  skeleton.py
socket/v1/C/: client.ilk  server.c  server.ilk  teste_socket.c
socket_udp/: main_client.py  main_server.py
(+102 files in other folders)
